Updated Git Ignore and added validateForm func

--- a/Moodify/.gitignore
+++ b/Moodify/.gitignore
@@ -1,3 +1,16 @@
 # Ignore user-specific Xcode data
 Moodify.xcodeproj/project.xcworkspace/xcuserdata/
 
+xcuserdata/
+*.xcuserstate
+build/
+DerivedData/
+xcuserdata/**/xcdebugger/
+
+.DS_Store
+
+*.swp
+*.swo
+
+*.lock
+UserInterfaceState.xcuserstate
